# Curso-Python

./: .gitignore  README.md  pyproject.toml
Aulas/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py
Aulas/Úteis/: __init__.py
Exercícios_Python/: 001.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py  010.py  011.py  012.py  013.py  014.py  015.py  016.py  017.py  018.py  019.py  020.py  021.py  022.py  023.py  024.py  025.py  026.py  027.py  028.py  029.py  030.py  031.py  032.py  033.py  034.py  035.py  036.py  037.py  038.py  039.py  040.py  (+76 more)
Meu_pacote/: Arquivo.py  Dados.py  Interface.py  Moeda.py  __init__.py
Meu_pacote.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
